--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
         // EXEMPLE DE PRODUCTION:
         // const backendApiUrl = 'https://mon-backend-isc.onrender.com'; 
         // !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-        const backendApiUrl = 'http://localhost:3000'; // Adresse pour le test local
+        const backendApiUrl = 'https://plateforme-isc-github-io.onrender.com'; // Adresse pour le test local
 
         // --- État Global de l'Application ---
         let isAdmin = false;
